[package]
name = "luna"
version = "0.0.1"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.19.1"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
